[tool.poetry]
name = "cog-tile-server-poc"
version = "0.1.0"
description = ""
authors = ["tsurutan <tsurutan.android@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
rasterio = "^1.3.9"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
