[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["tsurutan <tsurutan.android@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
rio-tiler = "^6.2.7"

[tool.poetry.scripts]
start = "main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
